--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     
     <button class="submit" onclick="changeColor('red')">red</button>
     <button class="submit" onclick="changeColor('green')">green</button>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <script>
   var currentColor = ''
   function changeColor(color) {
