--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
     
     <div class="container mt-5" >
-      <h1 style="text-align: center;">Created By Aaman Kumar Singh</h1>
+      <h1 style="text-align: center;">Created By Aman Kumar Singh</h1>
 
       <div style="text-align: center;" class="mt-3">
       <button class="submit btn btn-success" onclick="changeColor('green')">ON</button>
